# sparkland_assignment

./: .gitignore  CMakeLists.txt  README.md
include/sparkland/: coinbase_client.h  csv_logger.h  ema.h  logger.h  ring_buffer.h  tick.h  tick_parser.h  types.h
src/: coinbase_client.cpp  csv_logger.cpp  main.cpp  tick_parser.cpp
tests/: test_ema.cpp  test_tick_parser.cpp
